[package]
name = "LunarCli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.7", features = ["derive"] }
dirs = { version = "4.0.0" }
rand = "0.8.5"
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sha256 = "1.1.2"
winreg = "0.11.0"
