[package]
name = "LunarCli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.7", features = ["derive"] }
dirs = { version = "4.0.0" }
hex = "0.4.3"
indicatif = "0.17.3"
rand = "0.8.5"
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sha1 = "0.10.5"
sha256 = "1.1.2"
uuid = { version = "1.3.0", features = ["v4"] }
winreg = "0.11.0"
zip = "0.6.4"

[env]
RUST_BACKTRACE=1
